install/docker-compose-file/data/config/proxies/gloo-system/gateway-proxy.yaml
listeners:
- bindAddress: '::'
  bindPort: 8080
  httpListener:
    virtualHosts:
    - domains:
      - '*'
      metadata:
        sources:
        - kind: '*v1.VirtualService'
          name: default
          namespace: gloo-system
          observedGeneration: 0
      name: gloo-system.default
      options:
        extauth:
          configRef:
            name: plugin-auth
            namespace: gloo-system
      routes:
      - matchers:
        - prefix: /
        metadata:
          sources:
          - kind: '*v1.VirtualService'
            name: default
            namespace: gloo-system
            observedGeneration: 0
        routeAction:
          single:
            upstream:
              name: petstore
              namespace: gloo-system
  metadata:
    sources:
    - kind: '*v1.Gateway'
      name: gateway-proxy
      namespace: gloo-system
      observedGeneration: 0
  name: listener-::-8080
  useProxyProto: false
- bindAddress: '::'
  bindPort: 8443
  httpListener: {}
  metadata:
    sources:
    - kind: '*v1.Gateway'
      name: gateway-proxy-ssl
      namespace: gloo-system
      observedGeneration: 0
  name: listener-::-8443
  useProxyProto: false
metadata:
  labels:
    created_by: gateway
  name: gateway-proxy
  namespace: gloo-system
  resourceVersion: "55"
status:
  reportedBy: gloo
  state: Accepted
